--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,4 +1,4 @@
 	<header id="header">
-        <div class="logo"><a href="/">{{titulo}} <span>{{nombre}}</span></a></div>
+        <div class="logo"><a href="/">Road Trip <span>by Emanuel Reniero</span></a></div>
         <a href="#menu"><span>Menu</span></a>
     </header>
